update build script for parcel

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "parcel index.html --open",
-    "build": "parcel build dist/index.html"
+    "build": "parcel build dist/index.html --public-url /katshaze.github.io/"
   },
   "repository": {
     "type": "git",
