--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "parcel index.html --open",
-    "build": "parcel build dist/index.html --public-url /katshaze.github.io/"
+    "build": "parcel build index.html --public-url /katshaze.github.io/",
+    "deploy": "gh-pages deploy -d dist -b master"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   },
   "homepage": "https://github.com/katshaze/katshaze.github.io#readme",
   "devDependencies": {
+    "gh-pages": "^2.1.1",
     "parcel-bundler": "^1.12.4"
   }
 }
