--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "parcel index.html --open",
-    "build": "parcel build index.html",
+    "build": "parcel build index.html && cp CNAME ./dist",
     "deploy": "gh-pages deploy -d dist -b master"
   },
   "repository": {
