--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "gh-pages": "^2.1.1",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-clean-dist": "0.0.6"
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.1"
   }
 }
